--- a/src/email-templates/src/reset-password/index.html
+++ b/src/email-templates/src/reset-password/index.html
@@ -981,7 +981,7 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
                 Hey Martha,
                 <br />
                 <br />
-                You recently requested to reset your password for your Guardtrol
+                You recently requested to reset your password for your Stafftrol
                 account.
               </p>
               <p class="mb-8">
@@ -998,7 +998,7 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
               <p>
                 Best regards,
                 <br />
-                Guardtrol Team
+                Stafftrol Team
               </p>
             </td>
           </tr>
