--- a/src/email-templates/src/transaction-receipt/index.html
+++ b/src/email-templates/src/transaction-receipt/index.html
@@ -1003,7 +1003,7 @@ Guardtrol Team -->
               <p>
                 Best regards,
                 <br />
-                Guardtrol Team
+                Stafftrol Team
               </p>
             </td>
           </tr>
