--- a/src/email-templates/src/verify-account/index.html
+++ b/src/email-templates/src/verify-account/index.html
@@ -948,7 +948,7 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
                 Hey Martha,
                 <br />
                 <br />
-                Thanks for signing up on Guardtrol! This is the start of an
+                Thanks for signing up on Stafftrol! This is the start of an
                 exciting journey and we can’t wait to see all the beautiful
                 designs you’ll create with our templates.
               </p>
